add note about copy buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Text box at the top of the page -->
     <div class="textboxborder">
       <p>Converts images into code for a Mindustry Micro Processor, so that you can print images on logic displays in the game.</p>
-      
+      <p>NOTE: If the copy buttons don't work, try copying the code by right-clicking on it.</p>
       <!-- collapsible how to menu -->
       <button type="button" class="collapsible">How to use</button>
       <div class="content">
