--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <div class="textboxborder">
       <p>Converts images into code for a Mindustry Micro Processor, so that you can print images on logic displays in the game.</p>
       <p>NOTE: If the copy buttons don't work, try copying the code by right-clicking on it.</p>
+      <img src="working-picture.png" alt="Logic display showing a picture of a sunflower"> <!-- Image is from https://commons.wikimedia.org/wiki/File:Sunflower_sky_backdrop.jpg -->
+      
+
+
       <!-- collapsible how to menu -->
       <button type="button" class="collapsible">How to use</button>
       <div class="content">
