added note about how images are resized

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Text box at the top of the page -->
     <div class="textboxborder">
       <p>Converts images into code for a Mindustry Micro Processor, so that you can print images on logic displays in the game.</p>
+      <p>The image you upload will be resized to a 20x20 image so it can be displayed correctly.</p>
       <p>NOTE: If the copy buttons don't work, try copying the code by right-clicking on it.</p>
       <img src="working-picture.png" alt="Logic display showing a picture of a sunflower"> <!-- Image is from https://commons.wikimedia.org/wiki/File:Sunflower_sky_backdrop.jpg -->
       
