make html slightly less atrocious

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
@@ -60,9 +60,7 @@
       <button onclick="copyCodeOutput()">Copy code</button>
       <div class="textboxborder">
         <textarea id="codeoutput">Your code will show up once you upload an image!</textarea>
-        <!-- <code id="codeoutput">Your code will show up once you upload an image!</code> -->
       </div>
-    </div>
     </div>
   </body>
   <script src="index.js" type="text/javascript"></script>
