--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div class="main">
     <h1>Mindustry Image Generator</h1>
+      <a href="https://github.com/sudobeans/mindustry-image-generator/"><p>Github repository</p></a>
 
     <!-- Text box at the top of the page -->
     <div class="textboxborder">
@@ -16,8 +17,6 @@
       <p>NOTE: If the copy buttons don't work, try copying the code by right-clicking on it.</p>
       <img src="working-picture.png" alt="Logic display showing a picture of a sunflower"> <!-- Image is from https://commons.wikimedia.org/wiki/File:Sunflower_sky_backdrop.jpg -->
       
-
-
       <!-- collapsible how to menu -->
       <button type="button" class="collapsible">How to use</button>
       <div class="content">
