add link to r4v10l1's image generator

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="main">
     <h1>Mindustry Image Generator</h1>
     <a href="https://github.com/sudobeans/mindustry-image-generator/"><p>Github repository</p></a>
+    <a href="https://github.com/r4v10l1/mindustry-image-generator"><p>40x40 image generator by r4v10l1</p></a>
 
     <!-- Text box at the top of the page -->
     <div class="textboxborder">
